Limpiando un poco y arreglado un pequeño error que no me costo horas en encontrar en el json de ejemplo :)